fixed responsiveness  and fixed overflow

--- a/src/ui/css/containers/App.css
+++ b/src/ui/css/containers/App.css
@@ -26,7 +26,9 @@
 	background-color: #393B4A;
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	padding: 10px 0;
 }
 
 /* General pages */
@@ -35,7 +37,6 @@
 }
 
 .page_title {
-	margin-top: 10px;
 	text-align: center;
 	width: 100%;
 }
